--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
       mix-blend-mode: screen;
     }
 
-    /* ёлки + деньги (видно, что это ёлки и деньги) */
-    .bgTrees{
+    /* 🎄 Новогодние атрибуты (без денег/ёлок): шары, подарки, огни, сугробы */
+    .bgNY{
       position:fixed;
-      left:0; right:0; bottom:-10px;
-      height:320px;
+      left:0; right:0; bottom:-12px;
+      height:360px;
       pointer-events:none;
       z-index: 2;
-      opacity:.78;
+      opacity:.82;
       background-repeat: repeat-x;
       background-position: center bottom;
-      background-size: 1200px 320px;
-      filter: saturate(1.1) contrast(1.05);
-      background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%201200%20320%27%3E%0A%20%20%3Cdefs%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27sky%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%270%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(123%2C97%2C255%2C0.22)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(0%2C0%2C0%2C0)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27ground%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%270%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(2%2C10%2C26%2C0)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(2%2C10%2C26%2C0.86)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3CradialGradient%20id%3D%27glow%27%20cx%3D%2750%25%27%20cy%3D%2715%25%27%20r%3D%2775%25%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(69%2C227%2C255%2C0.14)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270.6%27%20stop-color%3D%27rgba(0%2C0%2C0%2C0)%27/%3E%0A%20%20%20%20%3C/radialGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27tree%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%270%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(78%2C255%2C198%2C0.26)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(20%2C120%2C95%2C0.18)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27coin%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%271%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(255%2C225%2C120%2C0.32)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(255%2C170%2C60%2C0.18)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27bill%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%271%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(190%2C255%2C220%2C0.22)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(90%2C220%2C170%2C0.14)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%3C/defs%3E%0A%0A%20%20%3Crect%20width%3D%271200%27%20height%3D%27320%27%20fill%3D%27url(%23sky)%27/%3E%0A%20%20%3Crect%20width%3D%271200%27%20height%3D%27320%27%20fill%3D%27url(%23glow)%27/%3E%0A%20%20%3Cpath%20d%3D%27M0%20250%20C220%20215%20420%20280%20610%20248%20S980%20225%201200%20258%20V320%20H0%20Z%27%20fill%3D%27url(%23ground)%27/%3E%0A%0A%20%20%3Cg%20id%3D%27pine%27%3E%0A%20%20%20%20%3Cpolygon%20points%3D%270%2C88%2034%2C24%2068%2C88%27%20fill%3D%27url(%23tree)%27/%3E%0A%20%20%20%20%3Cpolygon%20points%3D%27-6%2C104%2034%2C36%2074%2C104%27%20fill%3D%27url(%23tree)%27%20opacity%3D%270.95%27/%3E%0A%20%20%20%20%3Cpolygon%20points%3D%27-14%2C122%2034%2C50%2082%2C122%27%20fill%3D%27url(%23tree)%27%20opacity%3D%270.92%27/%3E%0A%20%20%20%20%3Crect%20x%3D%2728%27%20y%3D%27122%27%20width%3D%2712%27%20height%3D%2720%27%20rx%3D%274%27%20fill%3D%27rgba(200%2C255%2C230%2C0.08)%27/%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3Cg%20id%3D%27coinOrn%27%3E%0A%20%20%20%20%3Cline%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%270%27%20y2%3D%2710%27%20stroke%3D%27rgba(255%2C255%2C255%2C0.12)%27%20stroke-width%3D%272%27%20stroke-linecap%3D%27round%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%270%27%20cy%3D%2718%27%20r%3D%2710%27%20fill%3D%27url(%23coin)%27%20stroke%3D%27rgba(255%2C225%2C140%2C0.26)%27%20stroke-width%3D%272%27/%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3Cg%20id%3D%27billOrn%27%3E%0A%20%20%20%20%3Cline%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%270%27%20y2%3D%2710%27%20stroke%3D%27rgba(255%2C255%2C255%2C0.12)%27%20stroke-width%3D%272%27%20stroke-linecap%3D%27round%27/%3E%0A%20%20%20%20%3Crect%20x%3D%27-14%27%20y%3D%2712%27%20width%3D%2728%27%20height%3D%2716%27%20rx%3D%275%27%20fill%3D%27url(%23bill)%27%20stroke%3D%27rgba(190%2C255%2C220%2C0.22)%27%20stroke-width%3D%272%27/%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3Cg%20opacity%3D%270.96%27%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(70%20148)%20scale(1.2)%27%3E%3Cuse%20href%3D%27%23pine%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(250%20146)%20scale(1.25)%27%3E%3Cuse%20href%3D%27%23pine%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(470%20150)%20scale(1.22)%27%3E%3Cuse%20href%3D%27%23pine%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(735%20148)%20scale(1.18)%27%3E%3Cuse%20href%3D%27%23pine%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(990%20150)%20scale(1.18)%27%3E%3Cuse%20href%3D%27%23pine%27/%3E%3C/g%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3Cg%20opacity%3D%270.95%27%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(105%20178)%27%3E%3Cuse%20href%3D%27%23coinOrn%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(285%20176)%27%3E%3Cuse%20href%3D%27%23billOrn%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(505%20182)%27%3E%3Cuse%20href%3D%27%23coinOrn%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(770%20182)%27%3E%3Cuse%20href%3D%27%23billOrn%27/%3E%3C/g%3E%0A%20%20%20%20%3Cg%20transform%3D%27translate(1020%20182)%27%3E%3Cuse%20href%3D%27%23coinOrn%27/%3E%3C/g%3E%0A%20%20%3C/g%3E%0A%3C/svg%3E");
+      background-size: 1200px 360px;
+      filter: saturate(1.08) contrast(1.05);
+      background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%201200%20360%27%3E%0A%20%20%3Cdefs%3E%0A%20%20%20%20%3CradialGradient%20id%3D%27bokeh1%27%20cx%3D%2735%25%27%20cy%3D%2730%25%27%20r%3D%2765%25%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(69%2C227%2C255%2C0.14)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270.55%27%20stop-color%3D%27rgba(123%2C97%2C255%2C0.10)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(0%2C0%2C0%2C0)%27/%3E%0A%20%20%20%20%3C/radialGradient%3E%0A%20%20%20%20%3CradialGradient%20id%3D%27bokeh2%27%20cx%3D%2775%25%27%20cy%3D%2735%25%27%20r%3D%2765%25%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(43%2C140%2C255%2C0.12)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270.6%27%20stop-color%3D%27rgba(123%2C97%2C255%2C0.08)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(0%2C0%2C0%2C0)%27/%3E%0A%20%20%20%20%3C/radialGradient%3E%0A%0A%20%20%20%20%3ClinearGradient%20id%3D%27snow%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%270%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(255%2C255%2C255%2C0)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(255%2C255%2C255%2C0.10)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%0A%20%20%20%20%3ClinearGradient%20id%3D%27giftRed%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%271%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(255%2C120%2C150%2C0.18)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(255%2C160%2C120%2C0.12)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27giftBlue%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%271%27%20y2%3D%271%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(69%2C227%2C255%2C0.16)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(43%2C140%2C255%2C0.12)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%27ribbon%27%20x1%3D%270%27%20y1%3D%270%27%20x2%3D%271%27%20y2%3D%270%27%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%270%27%20stop-color%3D%27rgba(255%2C255%2C255%2C0.16)%27/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%271%27%20stop-color%3D%27rgba(255%2C225%2C150%2C0.12)%27/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%3C/defs%3E%0A%0A%20%20%3Crect%20width%3D%271200%27%20height%3D%27360%27%20fill%3D%27url(%23bokeh1)%27/%3E%0A%20%20%3Crect%20width%3D%271200%27%20height%3D%27360%27%20fill%3D%27url(%23bokeh2)%27/%3E%0A%0A%20%20%3C!--%20огоньки%20--%3E%0A%20%20%3Cg%20opacity%3D%270.95%27%3E%0A%20%20%20%20%3Ccircle%20cx%3D%27150%27%20cy%3D%27130%27%20r%3D%275%27%20fill%3D%27rgba(255%2C225%2C150%2C0.26)%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%27320%27%20cy%3D%27110%27%20r%3D%274%27%20fill%3D%27rgba(69%2C227%2C255%2C0.22)%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%27520%27%20cy%3D%27120%27%20r%3D%275%27%20fill%3D%27rgba(123%2C97%2C255%2C0.20)%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%27820%27%20cy%3D%27105%27%20r%3D%274%27%20fill%3D%27rgba(255%2C225%2C150%2C0.22)%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%271020%27%20cy%3D%27130%27%20r%3D%275%27%20fill%3D%27rgba(69%2C227%2C255%2C0.20)%27/%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3C!--%20подвесные%20шары%20--%3E%0A%20%20%3Cg%20opacity%3D%270.9%27%3E%0A%20%20%20%20%3Cline%20x1%3D%27100%27%20y1%3D%270%27%20x2%3D%27100%27%20y2%3D%2770%27%20stroke%3D%27rgba(0%2C0%2C0%2C0.28)%27%20stroke-width%3D%272%27%20stroke-linecap%3D%27round%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%27100%27%20cy%3D%2790%27%20r%3D%2718%27%20fill%3D%27rgba(69%2C227%2C255%2C0.14)%27%20stroke%3D%27rgba(255%2C255%2C255%2C0.12)%27%20stroke-width%3D%272%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%2798%27%20cy%3D%2784%27%20r%3D%276%27%20fill%3D%27rgba(255%2C255%2C255%2C0.14)%27/%3E%0A%0A%20%20%20%20%3Cline%20x1%3D%271120%27%20y1%3D%270%27%20x2%3D%271120%27%20y2%3D%2760%27%20stroke%3D%27rgba(0%2C0%2C0%2C0.28)%27%20stroke-width%3D%272%27%20stroke-linecap%3D%27round%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%271120%27%20cy%3D%2782%27%20r%3D%2717%27%20fill%3D%27rgba(123%2C97%2C255%2C0.14)%27%20stroke%3D%27rgba(255%2C255%2C255%2C0.12)%27%20stroke-width%3D%272%27/%3E%0A%20%20%20%20%3Ccircle%20cx%3D%271116%27%20cy%3D%2776%27%20r%3D%276%27%20fill%3D%27rgba(255%2C255%2C255%2C0.12)%27/%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3C!--%20подарки%20по%20углам%20--%3E%0A%20%20%3Cg%20opacity%3D%270.9%27%3E%0A%20%20%20%20%3Crect%20x%3D%2770%27%20y%3D%27240%27%20width%3D%27120%27%20height%3D%2785%27%20rx%3D%2718%27%20fill%3D%27url(%23giftBlue)%27%20stroke%3D%27rgba(255%2C255%2C255%2C0.10)%27/%3E%0A%20%20%20%20%3Crect%20x%3D%27120%27%20y%3D%27240%27%20width%3D%2718%27%20height%3D%2785%27%20rx%3D%279%27%20fill%3D%27url(%23ribbon)%27/%3E%0A%20%20%20%20%3Crect%20x%3D%2770%27%20y%3D%27276%27%20width%3D%27120%27%20height%3D%2716%27%20rx%3D%278%27%20fill%3D%27url(%23ribbon)%27%20opacity%3D%270.85%27/%3E%0A%0A%20%20%20%20%3Crect%20x%3D%27995%27%20y%3D%27255%27%20width%3D%27125%27%20height%3D%2780%27%20rx%3D%2718%27%20fill%3D%27url(%23giftRed)%27%20stroke%3D%27rgba(255%2C255%2C255%2C0.10)%27/%3E%0A%20%20%20%20%3Crect%20x%3D%271050%27%20y%3D%27255%27%20width%3D%2718%27%20height%3D%2780%27%20rx%3D%279%27%20fill%3D%27url(%23ribbon)%27/%3E%0A%20%20%20%20%3Crect%20x%3D%27995%27%20y%3D%27288%27%20width%3D%27125%27%20height%3D%2716%27%20rx%3D%278%27%20fill%3D%27url(%23ribbon)%27%20opacity%3D%270.85%27/%3E%0A%20%20%3C/g%3E%0A%0A%20%20%3C!--%20сугробы%20--%3E%0A%20%20%3Cpath%20d%3D%27M0%20285%20C140%20255%20290%20310%20440%20285%20S740%20255%20900%20290%20S1080%20320%201200%20290%20V360%20H0%20Z%27%20fill%3D%27url(%23snow)%27/%3E%0A%3C/svg%3E");
     }
 
     /* ❄️ снег (ЗА карточками) */
@@ -87,7 +87,7 @@
       inset:0;
       z-index: 4;
       pointer-events:none;
-      opacity:.25; /* меньше снега */
+      opacity:.25;
     }
 
     .progress{
@@ -111,7 +111,7 @@
       z-index: 3;
     }
 
-    /* гирлянда под меню (аккуратно) */
+    /* гирлянда под меню */
     .garland{
       position:absolute;
       left:0; right:0;
@@ -255,7 +255,7 @@
       overflow:hidden;
       transform: translateZ(0);
       transition: transform .22s var(--ease), border-color .22s var(--ease);
-      z-index: 30; /* выше снега */
+      z-index: 30;
     }
     .card:before{
       content:"";position:absolute;inset:-1px;
@@ -301,6 +301,14 @@
       filter: brightness(1.55) saturate(1.10) contrast(1.06);
       transform: scale(1.05);
       z-index:-2;
+
+      /* ✅ мягкий переход фото в фон (без резкой границы) */
+      -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 72%, rgba(0,0,0,0) 100%);
+      mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 72%, rgba(0,0,0,0) 100%);
+      -webkit-mask-size: 100% 100%;
+      mask-size: 100% 100%;
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
     }
 
     .heroShade{
@@ -319,21 +327,22 @@
       pointer-events:none;
     }
 
+    /* ✅ усиленный blur-переход снизу */
     .heroEdge{
       position:absolute;
       left:-10%; right:-10%;
-      bottom:-55px;
-      height:160px;
+      bottom:-70px;
+      height:240px;
       z-index: 2;
       pointer-events:none;
       background:
         linear-gradient(180deg,
           rgba(6,24,58,0) 0%,
-          rgba(6,24,58,.55) 44%,
+          rgba(6,24,58,.52) 42%,
           rgba(6,24,58,.95) 100%
         );
-      filter: blur(14px);
-      opacity:.98;
+      filter: blur(22px);
+      opacity:1;
     }
 
     .heroGrid{
@@ -432,7 +441,7 @@
       box-shadow: 0 0 14px rgba(69,227,255,.35);
     }
 
-    /* PROMO bar (чуть уже) */
+    /* PROMO bar */
     .promoWrap{
       position:absolute;
       left: 0; right: 0;
@@ -779,11 +788,13 @@
       .stickyLeft{min-width:auto}
       .stickyHint{display:none}
       .stickyCopy{min-width:auto}
+
+      .bgNY{height:300px; opacity:.78;}
     }
 
     @media (prefers-reduced-motion: reduce){
       *{animation:none !important;transition:none !important}
-      #snowGlobal,.bgGlow,.bgTrees{display:none !important}
+      #snowGlobal,.bgGlow,.bgNY{display:none !important}
       .reveal{opacity:1;transform:none}
     }
   </style>
@@ -791,7 +802,7 @@
 
 <body>
   <div class="bgGlow" aria-hidden="true"></div>
-  <div class="bgTrees" aria-hidden="true"></div>
+  <div class="bgNY" aria-hidden="true"></div>
   <canvas id="snowGlobal" aria-hidden="true"></canvas>
 
   <div class="progress" id="progress"></div>
@@ -1172,7 +1183,7 @@
       history.replaceState(null, "", id);
     });
 
-    // reveal (ВАЖНО: это вернул, иначе всё "пропадает")
+    // reveal
     try{
       const io = new IntersectionObserver((entries)=> {
         for (const ent of entries) if (ent.isIntersecting) ent.target.classList.add("on");
@@ -1298,7 +1309,7 @@
       const flakes = [];
       const isMobile = matchMedia?.("(max-width: 820px)")?.matches;
 
-      const COUNT = isMobile ? 34 : 62;   // меньше снега
+      const COUNT = isMobile ? 34 : 62;
       const rnd=(a,b)=>a+Math.random()*(b-a);
 
       function resize(){
